--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "jest",
     "test:coverage": "jest --coverage",
+    "deploy": "ng deploy",
     "lint": "ng lint"
   },
   "private": true,
